# pandoc-examples

./: .gitignore  LICENSE  README.md
agreement/: Makefile  contract-agreement.md  meta.yaml
artefact-creation/: Makefile  README.md  Vagrantfile  meta.yaml
artefact-creation/artefact-submission/: README.html
artefact-creation/artefact-submission/assets/: pandoc.css
artefact-creation/artefact-submission/documentation/: Applicative-AST.html  Backtrace-Typechecker.html  Final-AST.html  Initial-Typechecker.html  MultiError-AST.html  MultiError-Typechecker.html  PhantomFunctors-AST.html  PhantomPhases-AST.html  doc-index-B.html  doc-index-C.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-L.html  doc-index-M.html  doc-index-R.html  doc-index-S.html  doc-index-U.html  doc-index-V.html  doc-index.html  index.html
artefact-creation/documentation/: Makefile  README.md  meta.yaml
artefact-creation/research/: Makefile  biblio.bib  comment.cut  typecheckingMonad.aux  typecheckingMonad.bbl  typecheckingMonad.blg  typecheckingMonad.out  typecheckingMonad.tex
book/: README.md
filters/: Makefile  README.md  TEST.md  filters.cabal  stack.yaml
filters/src/: Main.hs
math/: Makefile  math.tex
research-paper/: Makefile  README.md  main.aux  main.bbl  main.blg  main.md  main.out  main.tex  meta.yaml  mytemplate.tex
slides/: Makefile  SLIDES
writing/: Makefile  introduction.md
zenformatting/: Makefile  README.md  TEST.html  TEST.md  meta.yaml  stack.yaml  zenformatting.cabal
zenformatting/src/: Main.hs
(+64 files in other folders)
