name:                zenformatting
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/zenformatting#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable zenformatting
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pandoc >= 2.2.1
                     , pandoc-types >= 1.17.5.1
                     , text >= 1.2.3.1
                     , containers >= 0.5.11.0
